config/k8s/recovery-service-service-demo-tenant.yaml
apiVersion: v1
kind: Service
metadata:
  name: recovery-service-demo-tenant
  labels:
    app: recovery-service
    tenant: demo-tenant
  namespace: seccomp-privacy
spec:
  type: ClusterIP
  selector:
    app: recovery-service
    tenant: demo-tenant
  ports:
    - name: https
      port: 443
      targetPort: https
      protocol: TCP
